--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,8 @@
     flex-direction: column;
   }
 
+  .navbar a.active{ color:#fff; font-weight:700; }
+
   .wrapper {
     flex: 1;
   }
@@ -526,3 +528,4 @@
   filter: grayscale(0.2);
 }
 /* 插件結尾 */
+
